add form  elements

--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
   </head>
 
   <body>
+    <p>This is not a real online service! You Know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
+    <p>You <em>know</em> you want to.</p>
+    
+    <div class="form-container">
+      <h1>Let's do this!</h1>
+      
+      <label for="fname">First name</label>
+      <input type="text" id="fname" name="fname">
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name ="lname">
+      <label for"email">EMAIL</label>
+      <input type="email" id="email" name="email">
+      <label for="pnumber">PHONE NUMBER</label>
+      <input type="tel" id="pnumber" name="pnumber">
+      <label for="password">PASSWORD</label>
+      <input type="password" id="password" name="password">
+      <label for="cofmpassword">CONFIRM PASSWORD</label>
+      <input type="password" id="cofmpassword" name="password">
+    </div>
   </body>
+
 </html>
