--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
 
   <body>
+    
+
     <p>This is not a real online service! You Know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
     <p>You <em>know</em> you want to.</p>
     
@@ -27,6 +29,10 @@
       <label for="cofmpassword">CONFIRM PASSWORD</label>
       <input type="password" id="cofmpassword" name="password">
     </div>
+
+  <button>Create Account</button>
+  <p>Already have an account? <a>Log in</a></p>  
+
   </body>
 
 </html>
