add container for odin img and text

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
   <body>
     <div class="hero-container">
-      <img src="images/odin-lined.png" alt="stenciled drawing of odin, a bearded viking with an eyepatch"/>
-      <p>ODIN</p>
+      <div class="odin-container">
+        <img src="images/odin-lined.png" alt="stenciled drawing of odin, a bearded viking with an eyepatch"/>
+        <p>ODIN</p>
+      </div>
     </div>    
 
     <p>This is not a real online service! You Know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
