add refernce for photo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <img src="images/odin-lined.png" alt="stenciled drawing of odin, a bearded viking with an eyepatch"/>        
         <p>ODIN</p>
       </div>
+      <span>
+        <p>photo by <em>Halie West</em> on <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a></p>
+      </span>
     </div>    
     
     <div class="right-page">
@@ -43,6 +46,6 @@
       <button>Create Account</button>
       <p>Already have an account? <a href="./index.html">Log in</a></p>  
     </div>
-  </body>
 
+  </body>
 </html>
