add id to target links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>ODIN</p>
       </div>
       <span>
-        <p>photo by <em>Halie West</em> on <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a></p>
+        <p>photo by <em>Halie West</em> on <a id="left-link" href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a></p>
       </span>
     </div>    
     
@@ -44,7 +44,7 @@
       </div>
 
       <button>Create Account</button>
-      <p>Already have an account? <a href="./index.html">Log in</a></p>  
+      <p>Already have an account? <a id="right-link" href="./index.html">Log in</a></p>  
     </div>
 
   </body>
