add class to target p elements

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </div>    
     
     <div class="right-page">
-      <p>This is not a real online service! You Know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
-      <p>You <em>know</em> you want to.</p>
-      <p>Let's do this!</p>
+      <p class="right-page-p">This is not a real online service! You Know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
+      <p class="right-page-p">You <em>know</em> you want to.</p>
+      <p class="right-page-p">Let's do this!</p>
 
       <div class="form-container">
         <div class="left-box">
