--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="form-container">
         <div class="left-box">
         <label for="fname">First name</label>
-        <input type="text" id="fname" name="fname">
+        <input type="text" id="fname" name="fname" value="Thor">
         <label for"email">EMAIL</label>
         <input type="email" id="email" name="email">
         <label for="password">PASSWORD</label>
@@ -35,7 +35,7 @@
         </div>
         <div class="right-box">
         <label for="lname">Last Name</label>
-        <input type="text" id="lname" name ="lname">
+        <input type="text" id="lname" name ="lname" value="Odinson">
         <label for="pnumber">PHONE NUMBER</label>
         <input type="tel" id="pnumber" name="pnumber">
         <label for="cofmpassword">CONFIRM PASSWORD</label>
