--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <input type="email" id="email" name="email">
         <label for="password">PASSWORD</label>
         <input type="password" id="password" name="password">
+        <p id="error-msg">* Passwords do not match</p>
         </div>
         <div class="right-box">
         <label for="lname">Last Name</label>
